--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,4 +1,111 @@
 .flex-container
 {
-    
+    display: flex;
+    border: solid 1px black;
+}
+
+.child-w30 > article
+{
+    width: 30%;
+}
+
+.child-grow2 > article
+{
+    flex-grow: 2;
+}
+
+.wrap
+{
+    flex-wrap: wrap;
+}
+
+.column
+{
+    flex-direction: column;
+}
+
+.space-evenly
+{
+    justify-content: space-evenly;
+}
+
+.space-around
+{
+    justify-content: space-around;
+}
+
+.align-center
+{
+    align-items: center;
+}
+
+.flex-half
+{
+    flex-shrink: 2;
+}
+
+.flex-double
+{
+    flex-grow: 2;
+}
+
+.flex-triple
+{
+    flex-grow: 3;
+}
+
+.flex-one
+{
+    flex-grow: 1;
+}
+
+.flex-basis
+{
+    flex-basis: 2000px;
+}
+
+.flex-basis-50
+{
+    flex-basis: 50%;
+}
+
+.w100
+{
+    width: 100%;
+}
+
+.w50
+{
+    width: 50%;
+}
+
+.w40
+{
+    width: 40%;
+}
+
+.maxw25
+{
+    max-width: 25%;
+}
+
+.m-auto
+{
+    margin: auto;
+}
+
+.m-5
+{
+    margin: 5%;
+}
+
+.m-left-5
+{
+    margin-left: 5%;
+}
+
+.hw1000px
+{
+    height: 1000px;
+    width: 1000px;
 }
